--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build static
         id: build
-        run: npm i --workspace=client npm run build --workspace=client
+        run: npm i --workspace=client && npm run build --workspace=client
       - name: S3 deployment
         id: s3-deploy
         uses: dataesr/ovh-s3-deploy@main
