--- a/client/.env
+++ b/client/.env
@@ -1,7 +1,7 @@
-VITE_APP_NAME="BSOPENALEX"
+VITE_APP_NAME="BSO by OpenAlex"
 VITE_HEADER_TAG="dev"
 VITE_HEADER_TAG_COLOR="green-tilleul-verveine"
-VITE_MINISTER_NAME="Minisère de l'enseignement supérieur et de la recherche"
-VITE_DESCRIPTION="Une nouvelle application est en dévelopment"
-VITE_GIT_REPOSITORY_URL="https://github.com/dataesr"
+VITE_MINISTER_NAME="French ministry of higher education and research"
+VITE_DESCRIPTION="POC to reproduce French Open Science Monitor based on OpenAlex"
+VITE_GIT_REPOSITORY_URL="https://github.com/dataesr/bso-openalex"
 VITE_VERSION=$npm_package_version
