fix(graphs): Set mailto address as var env

--- a/client/.env
+++ b/client/.env
@@ -5,3 +5,4 @@ VITE_MINISTER_NAME="French ministry of higher education and research"
 VITE_DESCRIPTION="POC to reproduce French Open Science Monitor based on OpenAlex"
 VITE_GIT_REPOSITORY_URL="https://github.com/dataesr/bso-openalex"
 VITE_VERSION=$npm_package_version
+VITE_OPENALEX_MAILTO="bso@recherche.gouv.fr"
